--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <string name="app_name">SAU Club Manager</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Student Association Senate</string>
+    <string name="title_section2">Clubs</string>
+    <string name="title_section3">Events</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    <string name="action_example">Sign Out</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
