--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_section2">Clubs</string>
     <string name="title_section3">Events</string>
     <string name="title_section4">Student Association</string>
+    <string name="title_section5">My Feed</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Sign Out</string>
