--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SAU Club Manager</string>
+    <string name="app_name">Student Association</string>
     <string name="title_section1">Student Senate</string>
     <string name="title_section2">Clubs</string>
     <string name="title_section3">Events</string>
@@ -13,8 +13,18 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Student Association Senate Home Page -->
-    <string name="imageView"><a href="https://www.southern.edu/sa/senate/Pages/senate.aspx"></a></string>
 
+    <!-- SA Page -->
+    <string name="sa_officers_button">Officers</string>
+    <string name="sa_about_button">About</string>
+    <string name="sa_senate_button">Senate</string>
+    <string name="sa_phone_textView"><a href="tel:l4232362723">(423)-236-2723</a></string>
 
+    <!-- SN Page -->
+    <string name="sn_minutes_button">Minutes</string>
+    <string name="sn_senators_button">Current Senators</string>
+
+    <string name="email1">test@test.com</string>
+    <string name="email2">qmarcelle@gmail.com</string>
 
 </resources>
