--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Sign Out</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Student Association Senate Home Page -->
@@ -27,5 +28,13 @@
 
     <string name="email1">test@test.com</string>
     <string name="email2">qmarcelle@gmail.com</string>
+
+    <!-- Help Page -->
+    <string name="report_label">Report</string>
+    <string name="name_report">full name</string>
+    <string name="report_email">email address</string>
+    <string name="text_report">Here you can submit any issues you may be experiencing.
+        You may also submit suggestions and improvements you may have.</string>
+    <string name="button_report">Submit Now</string>
 
 </resources>
