--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Student Association</string>
+    <string name="app_name">SAU Club Manager</string>
     <string name="title_section1">Student Senate</string>
     <string name="title_section2">Clubs</string>
     <string name="title_section3">Events</string>
@@ -11,14 +11,14 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Sign Out</string>
     <string name="action_settings">Settings</string>
-    <string name="action_help">Help</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 
-    
 
-    
+
+
+
 
     <!-- Student Association Senate Home Page -->
 
@@ -42,5 +42,6 @@
     <string name="text_report">Here you can submit any issues you may be experiencing.
         You may also submit suggestions and improvements you may have.</string>
     <string name="button_report">Submit Now</string>
+
 
 </resources>
