--- a/clubProject/app/src/main/res/values/strings.xml
+++ b/clubProject/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+   <!--PARSE STRINGS-->
+    <string name="parse_app_id">BkUgm5IvI7OA78xbAmXBESaier27qLATHq0ihmAk</string>
+    <string name="parse_client_key">2SzErQ1N4ftas3IEIy5ZqGNFTTWYzQaRxmbFlfof</string>
+
     <!-- Student Association Senate Home Page -->
 
     <!-- SA Page -->
